<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@android:color/white"
    android:focusableInTouchMode="true">

    <android.support.constraint.Guideline
        android:id="@+id/login_guide_title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.102" />

    <android.support.constraint.Guideline
        android:id="@+id/login_guide_title_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.898" />

    <android.support.constraint.Guideline
        android:id="@+id/login_guide_title_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.056" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textColor="@color/login_title"
        android:textSize="@dimen/login_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/login_title_img"
        app:layout_constraintLeft_toRightOf="@id/login_guide_title_left"
        app:layout_constraintTop_toTopOf="@id/login_title_img" />

    <ImageView
        android:id="@+id/login_title_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@mipmap/bg_renlian"
        app:layout_constraintRight_toLeftOf="@id/login_guide_title_right"
        app:layout_constraintTop_toBottomOf="@id/login_guide_title_top" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title_img"
        app:layout_constraintWidth_percent="0.76">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="11"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/login_text"
            android:theme="@style/InputStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_input_top"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_input_phone"
        app:layout_constraintWidth_percent="0.76">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_passwords"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/login_text"
            android:theme="@style/InputStyle" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/BlueBtnRoundTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/login_input_phone"
        app:layout_constraintRight_toRightOf="@id/login_input_phone"
        app:layout_constraintTop_toBottomOf="@id/login_input_pass"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_forget"
        android:textColor="@color/empty_text"
        android:textSize="@dimen/login_text"
        app:layout_constraintLeft_toLeftOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/login_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_signUp"
        android:textColor="@color/empty_text"
        android:textSize="@dimen/login_text"
        app:layout_constraintRight_toRightOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />
</android.support.constraint.ConstraintLayout>
